--- a/inst/poster/my_poster/my_poster3.Rmd
+++ b/inst/poster/my_poster/my_poster3.Rmd
@@ -27,7 +27,14 @@ output:
 
 <hr>
 
-**Abstract** 
+**Abstract** This paragraph will be rendered inside a wide box right below the
+poster title and authors information.
+The `render_print` format option is set to `TRUE` by default in this poster
+sample, and will result in `postr::render` being called when knitting the
+document (see `help("flex_dashboard_poster", package = postr)`).
+To disable this (recommended in the initial stages of poster development)
+set the `render_print` option to `FALSE`.
+
 Eco-hydrological models are increasingly used in the contexts of hydrology, ecology, precision agriculture for a detailed description of the water cycle at various scales: local scale, an hillslope or a watershed. However, with increasing computing power and observations available, bigger and bigger amount of raw data are produced. Therefore the need to develop flexible and user-oriented interfaces to visualize multiple outputs, perform sensitivity analyzes and compare against observations emerges.
 This work presents two R open-source packages: **geotopbricks** and **geotopOptim2**. They offer an I/0 interface and R visualization tools the GEOtop hydrological distributed model (http://geotopmodel.github.io/geotop/), which solves water mass and energy budget equations
 to describe water cycle in the Earth´s critical zone.
@@ -39,7 +46,11 @@ As a demonstration example, an analysis of modeled and observed soil moisture an
 
 ## Body row {data-height=75}
 
-### **GEOtop Hydrological Model**
+### **Column 1 title**
+
+
+
+### GEOtop Hydrological Model
 
 
 [GEOtop](http://geotopmodel.github.io/geotop/) (Endrizzi et al, 2014 and references therein) is a distributed model of the mass and energy balance of the hydrological cycle. GEOtop is applicable to simulations in continuum in small or relatively large montain catchments. GEOtop deals with the effects of topography on the interaction between energy balance and hydrological cycle (water, glacier and snow) with peculiar solutions. The source code of GEOtop 2.0 with detailed documentation is available for researchers and environmental/software engineers through the following links:
@@ -48,7 +59,7 @@ As a demonstration example, an analysis of modeled and observed soil moisture an
 * https://github.com/geotopmodel/geotop
 * https://github.com/se27xx/GEOtop/
 
-heading
+#### Heading
 
 
 
@@ -62,7 +73,7 @@ hist(volcano)
 ```
 
 
-### **geotopbricks**
+### **Column 2 title**
 
 Content for the second column.
 
@@ -80,11 +91,12 @@ head(iris)
 
 
 
-### **geotopOptim2**
-
+### **Column 3 title**
 
 This template shows 3 columns in the body row, you can change this by adding
 or removing third level headings (i.e. lines starting with ###).
+
+
 
 
 
@@ -94,26 +106,4 @@ or removing third level headings (i.e. lines starting with ###).
 
 
 ### {data-width=50 .small}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
